@@ -1,0 +1,10 @@
+prefix=@CMAKE_INSTALL_PREFIX@
+includedir=${prefix}/include
+libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
+
+Name: libmp4tag
+Description: MP4 tagging lbirary
+Version: @LIBMP4TAG_BUILD_VERS@
+URL: https://sourceforge.net/project/libmp4tag/
+Libs: -L${libdir} -lmp4tag
+Cflags: -I${includedir}
