@@ -6,6 +6,9 @@
 
 **1.2.1 beta 2023-9---**
 
+* Changes:
+    * Create and install pkgconfig file.
+
 -->
 
 **1.2.0 beta 2023-8-28**
